--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,17 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:href="@{/layui/css/layui.css}" rel="stylesheet">
+    <script src="/layui/layui.js"></script>
     <title>Title</title>
     <!-- 引入刚刚下载的 ECharts 文件 -->
     <script src="/echars/echarts.min.js"></script>
     <script src="/echars/china.js"></script>
     <script src="/echars/jquery-1.11.1.min.js"></script>
+
+
+
 </head>
 <body>
-<!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-<div id="main" style="width: 900px;height:700px;">
+<!--layui的公共模块-->
+<div th:include="commonmenu :: menu">
 </div>
+<div class="layui-body">
+    <!-- 内容主体区域 -->
+    <div id="main" style="width: 900px;height:700px;">
+    </div>
+</div>
+
+
+<script>
+    //JS
+    layui.use(['element', 'layer', 'util'], function(){
+        var element = layui.element
+            ,layer = layui.layer
+            ,util = layui.util
+            ,$ = layui.$;
+
+        //头部事件
+        util.event('lay-header-event', {
+            //左侧菜单事件
+            menuLeft: function(othis){
+                layer.msg('展开左侧菜单的操作', {icon: 0});
+            }
+            ,menuRight: function(){
+                layer.open({
+                    type: 1
+                    ,content: '<div style="padding: 15px;">处理右侧面板的操作</div>'
+                    ,area: ['260px', '100%']
+                    ,offset: 'rt' //右上角
+                    ,anim: 5
+                    ,shadeClose: true
+                });
+            }
+        });
+
+    });
+</script>
+
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
     var myChart = echarts.init(document.getElementById('main'));
