--- a/src/main/resources/templates/line.html
+++ b/src/main/resources/templates/line.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:href="@{/layui/css/layui.css}" rel="stylesheet">
+    <script src="/layui/layui.js"></script>
     <title>Title</title>
     <!-- 引入刚刚下载的 ECharts 文件 -->
     <script src="/echars/echarts.min.js"></script>
@@ -10,9 +14,16 @@
     <script src="/echars/jquery-1.11.1.min.js"></script>
 </head>
 <body>
-<!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-<div id="main" style="width: 900px;height:500px;">
+<!--layui的公共模块-->
+<div th:include="commonmenu :: menu">
 </div>
+<div class="layui-body">
+    <!-- 内容主体区域 -->
+    <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
+    <div id="main" style="width: 900px;height:700px;">
+    </div>
+</div>
+
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
     var myChart = echarts.init(document.getElementById('main'));
