全球疫情地图

--- a/src/main/resources/templates/commonmenu.html
+++ b/src/main/resources/templates/commonmenu.html
@@ -64,7 +64,7 @@
                         <dd><a href="/toPie;">饼图</a></dd>
                         <dd><a href="/toBar;">疫情柱状图</a></dd>
                         <dd><a href="/toLine;">疫情折线图</a></dd>
-                        <dd><a href="">the links</a></dd>
+                        <dd><a href="/toGlobal">全球疫情地图展示</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
