03.中国疫情地图，查询操作

--- a/src/main/resources/templates/line.html
+++ b/src/main/resources/templates/line.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link th:href="@{/layui/css/layui.css}" rel="stylesheet">
-    <script src="/layui/layui.js"></script>
-    <title>Title</title>
     <!-- 引入刚刚下载的 ECharts 文件 -->
-    <script src="/echars/echarts.min.js"></script>
-    <script src="/echars/china.js"></script>
-    <script src="/echars/jquery-1.11.1.min.js"></script>
+    <script th:src="@{/echars/echarts.min.js}"></script>
+    <script th:src="@{/echars/china.js}"></script>
+    <script th:src="@{/echars/jquery-1.11.1.min.js}"></script>
+    <link th:href="@{/layui/css/layui.css}" rel="stylesheet" media="all">
+    <script src="/layui/layui.js"></script>
 </head>
 <body>
 <!--layui的公共模块-->
@@ -20,7 +16,8 @@
 <div class="layui-body">
     <!-- 内容主体区域 -->
     <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-    <div id="main" style="width: 900px;height:700px;">
+    <div style="padding: 15px;">
+        <div id="main" style="width: 900px;height:700px;"></div>
     </div>
 </div>
 
