--- a/src/main/resources/templates/commonmenu.html
+++ b/src/main/resources/templates/commonmenu.html
@@ -68,9 +68,9 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">menu group 2</a>
+                    <a href="javascript:;">疫情数据管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">list 1</a></dd>
+                        <dd><a href="/toChinaManager">中国疫情数据管理</a></dd>
                         <dd><a href="javascript:;">list 2</a></dd>
                         <dd><a href="">超链接</a></dd>
                     </dl>
