--- a/src/main/resources/templates/admin/chinadatamanger.html
+++ b/src/main/resources/templates/admin/chinadatamanger.html
@@ -15,9 +15,62 @@
 <body>
 <!--layui的公共模块-->
 <div th:include="commonmenu :: menu"></div>
-
+<!--模态窗 默认隐藏-->
+<div id="addORupdateDiv" style="display: none;padding: 10px;padding-right: 5%">
+    <form action="" method="post" id="searchFrm2" lay-filter="searchFrm2" class="layui-form">
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">省份名称</label>
+                <div class="layui-input-inline">
+                    <input type="text" name="name"  id="chinaname" class="layui-input input-radius"
+                           placeholder="请输入省份名称">
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">确诊数量</label>
+                <div class="layui-input-inline">
+                    <input type="text" name="value" id="chinavalue"  class="layui-input input-radius"
+                           placeholder="请输入确诊数量">
+                </div>
+            </div>
+            <div class="layui-inline" style="margin-left: 10%">
+                <button type="button" class="layui-btn layui-btn-sm layui-btn-radius" lay-submit="" lay-filter="doAdd">
+                    <i class="layui-icon layui-icon-search layui-icon-normal"></i>新增或修改
+                </button>
+                <button type="reset"  class="layui-btn layui-btn-sm layui-btn-radius layui-btn-warm">
+                    <i class="layui-icon layui-icon-refresh"></i><span>重置</span>
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
 <div class="layui-body">
     <!-- 内容主体区域 -->
+    <!-- 搜索框 模板-->
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 15px">
+        <legend>搜索条件</legend>
+    </fieldset>
+    <form action="" method="post" id="searchFrm" lay-filter="searchFrm" class="layui-form">
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">省份名称</label>
+                <div class="layui-input-inline">
+                    <input type="text" name="name"  class="layui-input input-radius"
+                           placeholder="请输入省份名称">
+                </div>
+            </div>
+            <div class="layui-inline" style="margin-left: 10%">
+                <button type="button" class="layui-btn layui-btn-sm layui-btn-radius" lay-submit="" lay-filter="doSearch">
+                    <i class="layui-icon layui-icon-search layui-icon-normal"></i>查询
+                </button>
+                <button type="reset"  class="layui-btn layui-btn-sm layui-btn-radius layui-btn-warm">
+                    <i class="layui-icon layui-icon-refresh"></i><span>重置</span>
+                </button>
+
+            </div>
+        </div>
+    </form>
+    <!--table-->
     <div style="padding: 15px;">
         <table class="layui-hide" id="demo" lay-filter="test"></table>
     </div>
@@ -26,9 +79,9 @@
 
 
 <script type="text/html" id="barDemo">
-<!--    模板-->
-    <button type="button" lay-event="updata" class="layui-btn layui-btn-sm layui-btn-radius">
-        <i class="layui-icon layui-icon-edit"></i> 编辑
+    <!--模板-->
+    <button type="button" lay-event="update" class="layui-btn layui-btn-sm layui-btn-radius">
+        <i class="layui-icon layui-icon-edit" onclick="openAddLayer()"></i> 编辑
     </button>
     <button type="button" lay-event="delete" class="layui-btn layui-btn-sm layui-btn-danger layui-btn-radius">
         <i class="layui-icon layui-icon-delete"></i> 删除
@@ -37,21 +90,21 @@
 
 <script>
 
-
-    layui.use(function(){
+    // 删除后通过tableIns 再次发送请求渲染表格
+    var tableIns;
+    //关闭弹窗 指定变量名
+    var mainIndex;
+    //加载模块
+    layui.use(['jquery'],function(){
         // 得到需要的内置组件
-        var layer = layui.layer; //弹层
-        var laypage = layui.laypage; //分页
-        var laydate = layui.laydate; //日期
-        var table = layui.table; //表格
-        var carousel = layui.carousel; //轮播
-        var upload = layui.upload; //上传
-        var element = layui.element; //元素操作
-        var slider = layui.slider; //滑块
-        var dropdown = layui.dropdown; //下拉菜单
+        var layer = layui.layer//弹层
+            ,$ =layui.jquery
+            ,form=layui.form; //查询
 
-        // 向世界问个好
-        layer.msg('Hello World');
+        var laypage = layui.laypage; //分页
+        var table = layui.table; //表格
+        var element = layui.element; //元素操作
+
 
         // Tab 切换
         element.on('tab(demo)', function(data){
@@ -78,22 +131,19 @@
             ] ]
         });
 
-        // 头工具栏事件
+        // 监听头工具栏事件  新增 修改 和 删除
         table.on('toolbar(test)', function(obj){
-            var checkStatus = table.checkStatus(obj.config.id)
-                ,data = checkStatus.data; //获取选中的数据
+            var data = obj.data; //获取选中的数据
             switch(obj.event){
                 case 'add':
-                    layer.msg('添加');
+                    //调出弹窗
+                    openAddLayer();
+                    // layer.msg('添加');
                     break;
                 case 'update':
-                    if(data.length === 0){
-                        layer.msg('请选择一行');
-                    } else if(data.length > 1){
-                        layer.msg('只能同时编辑一个');
-                    } else {
-                        layer.alert('编辑 [id]：'+ checkStatus.data[0].id);
-                    }
+                    //弹出弹窗，加载一次数据
+                    // 1.回显数据
+                    openAddLayer(data);
                     break;
                 case 'delete':
                     if(data.length === 0){
@@ -105,24 +155,29 @@
             };
         });
 
-        // 监听行工具事件
-        table.on('tool(test)', function(obj){ //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
-            var data = obj.data //获得当前行数据
-                ,layEvent = obj.event; //获得 lay-event 对应的值
+        /**
+         *  删除和编辑 监听行工具事件
+         */
+        //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+        table.on('tool(test)', function(obj){
+            var data = obj.data//获得当前行数据
+                ,layEvent = obj.event;
             if(layEvent === 'update'){
                 //更新的逻辑代码
-                layer.msg('查看操作');
+                openAddLayer(data);
             } else if(layEvent === 'delete') {
                     layer.confirm('真的删除行么', function (index) {
                         obj.del(); //删除对应行（tr）的DOM结构
 
                         //向服务端发送删除指令 ajax请求，第一个地址
-                        $.post("/china/deleteById",{id:obj.id},function (res){
+                        $.post("/china/deleteById",{id:obj.data.id},function (res){
                             if(res.code == 200){
+                                //重新加载表格
                                 tableIns.reload({
                                     where:"",
                                 });
                             }
+                            layer.msg(res.msg);
                         })
                         layer.close(index);
                     });
@@ -130,75 +185,71 @@
                 }
         });
 
-        // 执行一个轮播实例
-        carousel.render({
-            elem: '#test1'
-            ,width: '100%' //设置容器宽度
-            ,height: 200
-            ,arrow: 'none' //不显示箭头
-            ,anim: 'fade' //切换动画方式
-        });
+        /**
+         * 模糊查询
+         */
 
-        // 将日期直接嵌套在指定容器中
-        var dateIns = laydate.render({
-            elem: '#laydateDemo'
-            ,position: 'static'
-            ,calendar: true //是否开启公历重要节日
-            ,mark: { //标记重要日子
-                '0-10-14': '生日'
-                ,'2020-01-18': '小年'
-                ,'2020-01-24': '除夕'
-                ,'2020-01-25': '春节'
-                ,'2020-02-01': '上班'
-            }
-            ,done: function(value, date, endDate){
-                if(date.year == 2017 && date.month == 11 && date.date == 30){
-                    dateIns.hint('一不小心就月底了呢');
+        // 提交对应上面的 lay-filter="doSearch" 名字
+        form.on("submit(doSearch)",function (data){
+            tableIns.reload({
+                //查询所有的值
+                where: data.field,
+                //当前页
+                page:{
+                    curr: 1
                 }
-            }
-            ,change: function(value, date, endDate){
-                layer.msg(value)
-            }
-        });
+            });
+            return false;
+        })
 
-        // 分页
+        /**
+         * 新增数据请求
+         */
+        form.on("submit(doAdd)",function (data){
+            $.post("/china/addOrUpdateChina",data.field,function (res){
+                //新增后 重新加载表格
+                if(res.code==200) {
+                    tableIns.reload();
+                }
+                layer.msg(res.msg);
+                layer.close(mainIndex);
+            })
+            return false;
+        })
+
+        /**
+         * 模态窗 页面层
+         */
+        function openAddLayer(data){
+            mainIndex = layer.open({
+                type: 1,
+                skin: 'layui-layer-rim', //加上边框
+                content: $("#addORupdateDiv"), //html内容
+                area: ['400px', '250px'], //宽高
+                success:function () {
+                    //列表中的缓存清除
+                    $("#searchFrm2")[0].reset;
+                    //发送数据请求，填充表单
+                    form.val("searchFrm2",data)
+                }
+            })
+        }
+
+        /**
+         * 分页
+         */
         laypage.render({
             elem: 'pageDemo' //分页容器的id
             ,count: 1000 //数据总数
             ,limit: 10 //每页显示的数据条数
             ,skin: '#1E9FFF' //自定义选中色值
-            //,layout: ['prev', 'page', 'next', 'count', 'limit', 'refresh', 'skip'] //自定义排版
+            //,layout: ['prev', 'page', 'next', 'count', 'limit', 'refresh', 'skip'] 自定义排版
             ,jump: function(obj, first){
                 if(!first){
                     layer.msg('第'+ obj.curr +'页', {offset: 'b'});
                 }
             }
         });
-
-        // 上传
-        upload.render({
-            elem: '#uploadDemo'
-            ,url: '' //此处配置你自己的上传接口即可
-            ,done: function(res){
-                layer.msg('上传成功');
-                layui.$('#uploadDemoView').removeClass('layui-hide').find('img').attr('src', res.files.file);
-                console.log(res)
-            }
-            ,before: function(){
-                layer.msg('上传中', {icon: 16, time: 0});
-            }
-        });
-
-        // 滑块
-        var sliderInst = slider.render({
-            elem: '#sliderDemo'
-            ,input: true //输入框
-        });
-
-        // 底部信息
-        var footerTpl = lay('#footer')[0].innerHTML;
-        lay('#footer').html(layui.laytpl(footerTpl).render({}))
-            .removeClass('layui-hide');
     });
 </script>
 </body>
