--- a/src/main/resources/templates/commonmenu.html
+++ b/src/main/resources/templates/commonmenu.html
@@ -10,8 +10,8 @@
     <script src="/layui/layui.js"></script>
 </head>
 <body>
-
-<div th:fragment="menu" class="layui-layout layui-layout-admin">
+<div th:fragment="menu">
+    <div  class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo layui-hide-xs layui-bg-black">中国疫情数据展示</div>
         <!-- 头部区域（可配合layui 已有的水平导航） -->
@@ -71,7 +71,13 @@
                     <a href="javascript:;">疫情数据管理</a>
                     <dl class="layui-nav-child">
                         <dd><a href="/toChinaManager">中国疫情数据管理</a></dd>
-                        <dd><a href="javascript:;">list 2</a></dd>
+                        <dd><a href="">超链接</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">健康打卡管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="/toHealthClock">打卡记录</a></dd>
                         <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
@@ -84,6 +90,7 @@
         <!-- 底部固定区域 -->
         底部固定区域
     </div>
+</div>
 </div>
 </body>
 </html>
